# tensorflow_ros

./: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
cmake/: cudnn.cmake  tensorflow.cmake
include/tensorflow_ros/: tensorflow_ros.hpp
src/: tensorflow_ros.cpp
test/: test_tensorflow_ros.test
test/model/: test_model.pb
test/src/: test_tensorflow_ros.cpp
